# DesignPatternsInCpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/[002]SOLID Design Principles/: CMakeLists.txt  readme.md
src/[002]SOLID Design Principles/[003]Single Responsibility Principle/: CMakeLists.txt  Journal.cpp  Journal.hpp  PersistenceManager.cpp  PersistenceManager.hpp  [003]Single Responsibility Principle.cpp  readme.md
src/[002]SOLID Design Principles/[004]Open-Closed Principle/: CMakeLists.txt  [004]Open-Closed Principle.cpp  readme.md
src/[002]SOLID Design Principles/[005]Liskov Substitution Principle/: CMakeLists.txt  [005]Liskov Substitution Principle.cpp  readme.md
src/[002]SOLID Design Principles/[006]Interface Segmentation Principle/: CMakeLists.txt  [006]Interface Segmentation Principle.cpp  readme.md
src/[002]SOLID Design Principles/[007]Dependency Inversion Principle/: CMakeLists.txt  [007]Dependency Inversion Principle.cpp  readme.md
src/[002]SOLID Design Principles/[008]Summary/: CMakeLists.txt  readme.md
src/[003]Builder Pattern/: CMakeLists.txt
src/[003]Builder Pattern/[009]Gamma Categorization/: CMakeLists.txt  readme.md
src/[003]Builder Pattern/[010]Overview/: readme.md
src/[003]Builder Pattern/[011]Life Without Builders/: CMakeLists.txt  readme.md
src/[003]Builder Pattern/[012]Builder/: BuilderExercise.cpp  CMakeLists.txt  [012]Builder.cpp  readme.md
src/[003]Builder Pattern/[013]Fluent Builder/: CMakeLists.txt  readme.md
src/[003]Builder Pattern/[014]Groovy-Style Builder/: CMakeLists.txt  [014]GroovyStyleBuilder.cpp  readme.md
src/[003]Builder Pattern/[015]Builder Facets/: CMakeLists.txt  [015]BuilderFacets.cpp  readme.md
src/[003]Builder Pattern/[Exercise]Builder Coding Exercise/: readme.md
src/[004]Factories Pattern/: CMakeLists.txt
src/[004]Factories Pattern/[018]Point Example/: CMakeLists.txt
src/[004]Factories Pattern/[019]Factory Method/: CMakeLists.txt
src/[004]Factories Pattern/[020]Factory/: CMakeLists.txt
src/[004]Factories Pattern/[021]Inner Factory/: CMakeLists.txt
src/[004]Factories Pattern/[022]Abstract Factory/: CMakeLists.txt  [022]Abstract Factory.cpp
src/[004]Factories Pattern/[023]Functional Factory/: CMakeLists.txt
src/[005]Prototype Pattern/: CMakeLists.txt
src/[005]Prototype Pattern/[025]Overview/: CMakeLists.txt
src/[005]Prototype Pattern/[026]Record Keeping/: CMakeLists.txt
src/[005]Prototype Pattern/[027]Prototype/: CMakeLists.txt  [027]Prototype.cpp
src/[005]Prototype Pattern/[028]Prototype Factory/: CMakeLists.txt
src/[005]Prototype Pattern/[029]Prototype Via serialization/: CMakeLists.txt
src/[006]Singleton Pattern/: CMakeLists.txt
src/[006]Singleton Pattern/[032]Singleton Implementation/: CMakeLists.txt  DummyDatabase.cpp  DummyDatabase.h  [32]Singleton Implementation.cpp
src/[006]Singleton Pattern/[033]Testability Issues/: CMakeLists.txt
src/[006]Singleton Pattern/[034]Singleton in Dependency Injection/: CMakeLists.txt
src/[006]Singleton Pattern/[035]Singleton Lifetime in DI Container/: CMakeLists.txt
src/[006]Singleton Pattern/[036]Monostate/: CMakeLists.txt
src/[006]Singleton Pattern/[037]Multiton/: CMakeLists.txt
src/[006]Singleton Pattern/[038]Summary/: CMakeLists.txt
src/[006]Singleton Pattern/[Exercise]Singleton Coding Exercise/: CMakeLists.txt  [Exercise]Singleton Coding Exercise.cpp
src/[007]Adapter Pattern/: CMakeLists.txt
src/[007]Adapter Pattern/[039]Overview/: CMakeLists.txt
src/[007]Adapter Pattern/[040]Vector-Raster Demo/: CMakeLists.txt
src/[007]Adapter Pattern/[041]Adapter Caching/: CMakeLists.txt
src/[007]Adapter Pattern/[042]Summary/: CMakeLists.txt
src/[007]Adapter Pattern/[Exercise]Adapter Coding Exercise/: CMakeLists.txt  [Exercise]Adapter Coding Exercise.cpp
src/[008]Bridge Pattern/: CMakeLists.txt
src/[008]Bridge Pattern/[043]Overview/: CMakeLists.txt  [043]Overview.cpp
src/[008]Bridge Pattern/[044]Pimpl Idiom/: CMakeLists.txt
src/[008]Bridge Pattern/[045]Shrink-Wrapped Pimpl/: CMakeLists.txt
src/[008]Bridge Pattern/[046]Bridge Implementation/: CMakeLists.txt
src/[009]Composite Pattern/: CMakeLists.txt
src/[010]Decorator Pattern/: CMakeLists.txt
src/[011]Facade Pattern/: CMakeLists.txt
src/[012]Flyweight Pattern/: CMakeLists.txt
src/[013]Proxy Pattern/: CMakeLists.txt
src/[014]Chain of Responsibility/: CMakeLists.txt
src/[015]Command Pattern/: CMakeLists.txt
src/[016]Interpreter Pattern/: CMakeLists.txt
src/[017]Iterator Pattern/: CMakeLists.txt
src/[018]Mediator Pattern/: CMakeLists.txt
src/[019]Memento Pattern/: CMakeLists.txt
src/[020]Observer Pattern/: CMakeLists.txt
src/[021]State Pattern/: CMakeLists.txt
src/[022]Strategy Pattern/: CMakeLists.txt
src/[023]Template Pattern/: CMakeLists.txt
src/[024]Visitor Pattern/: CMakeLists.txt
src/[03]Builder Pattern/: CMakeLists.txt
src/[03]Builder Pattern/[10]Overview/: readme.md
src/[04]Factories Pattern/: CMakeLists.txt
src/[05]Prototype Pattern/: CMakeLists.txt
src/[06]Singleton Pattern/: CMakeLists.txt  main.cpp
src/[07]Adapter Pattern/: CMakeLists.txt
src/[08]Bridge Pattern/: CMakeLists.txt
src/[09]Composite Pattern/: CMakeLists.txt
src/[10]Decorator Pattern/: CMakeLists.txt
src/[11]Facade Pattern/: CMakeLists.txt
src/[12]Flyweight Pattern/: CMakeLists.txt
src/[13]Proxy Pattern/: CMakeLists.txt
src/[14]Chain of Responsibility/: CMakeLists.txt
src/[15]Command Pattern/: CMakeLists.txt
src/[16]Interpreter Pattern/: CMakeLists.txt
src/[17]Iterator Pattern/: CMakeLists.txt
src/[18]Mediator Pattern/: CMakeLists.txt
src/[19]Memento Pattern/: CMakeLists.txt
src/[20]Observer Pattern/: CMakeLists.txt
src/[21]State Pattern/: CMakeLists.txt
src/[23]Template Pattern/: CMakeLists.txt
(+231 files in other folders)
