#add_subdirectory([02]SOLID Design Principles)
add_subdirectory([03]Builder\ Pattern)
add_subdirectory([04]Factories\ Pattern)
add_subdirectory([05]Prototype\ Pattern)
add_subdirectory([06]Singleton\ Pattern)
add_subdirectory([07]Adapter\ Pattern)
add_subdirectory([08]Bridge\ Pattern)
add_subdirectory([09]Composite\ Pattern)
add_subdirectory([10]Decorator\ Pattern)
add_subdirectory([11]Facade\ Pattern)
add_subdirectory([12]Flyweight\ Pattern)
add_subdirectory([13]Proxy\ Pattern)
add_subdirectory([14]Chain\ of\ Responsibility)
add_subdirectory([15]Command\ Pattern)
add_subdirectory([16]Interpreter\ Pattern)
add_subdirectory([17]Iterator\ Pattern)
add_subdirectory([18]Mediator\ Pattern)
add_subdirectory([19]Memento\ Pattern)
add_subdirectory([20]Observer\ Pattern)
add_subdirectory([21]State\ Pattern)
add_subdirectory([22]Strategy\ Pattern)
add_subdirectory([23]Template\ Pattern)
add_subdirectory([24]Visitor\ Pattern)

