add_subdirectory([002]SOLID\ Design\ Principles)
add_subdirectory("[003]Builder Pattern")
add_subdirectory("[004]Factories Pattern")
add_subdirectory("[005]Prototype Pattern")
add_subdirectory("[006]Singleton Pattern")
add_subdirectory("[007]Adapter Pattern")
add_subdirectory("[008]Bridge Pattern")
add_subdirectory("[009]Composite Pattern")
add_subdirectory("[010]Decorator Pattern")
add_subdirectory("[011]Facade Pattern")
add_subdirectory("[012]Flyweight Pattern")
add_subdirectory("[013]Proxy Pattern")
add_subdirectory("[014]Chain of Responsibility")
add_subdirectory("[015]Command Pattern")
add_subdirectory("[016]Interpreter Pattern")
add_subdirectory("[017]Iterator Pattern")
add_subdirectory("[018]Mediator Pattern")
add_subdirectory("[019]Memento Pattern")
add_subdirectory("[020]Observer Pattern")
add_subdirectory("[021]State Pattern")
add_subdirectory("[022]Strategy Pattern")
add_subdirectory("[023]Template Pattern")
add_subdirectory("[024]Visitor Pattern")

