add_subdirectory([003]Single\ Responsibility\ Principle)
add_subdirectory([004]Open-Closed\ Principle)
add_subdirectory([005]Liskov\ Substitution\ Principle)
add_subdirectory([006]Interface\ Segmentation\ Principle)
add_subdirectory([007]Dependency\ Inversion\ Principle)
add_subdirectory([008]Summary)