#add_subdirectory([31]Overview)
add_subdirectory([32]Singleton\ Implementation)
add_subdirectory([33]Testability\ Issues)
#add_subdirectory([34]Singleton in Dependency Injection)
add_subdirectory([35]Singleton\ Lifetime\ in\ DI\ Container)
#add_subdirectory([36]Monostate)
add_subdirectory([37]Multiton)
add_subdirectory([38]Summary)
add_subdirectory([Exercise]Singleton\ Coding\ Exercise)




